# deltabot

./: .gitignore  DeltaBot.kicad_pcb  IMG_5288 2.HEIC  List.md  PCB.md  README.md  Setup.md
schematic_files/: DeltaBot.kicad_pcb  DeltaBot.kicad_pro  DeltaBot.kicad_sch
schematic_files/Gerber/: DeltaBot-NPTH-drl_map.gbr  DeltaBot-NPTH.drl  DeltaBot-PTH-drl_map.gbr  DeltaBot-PTH.drl
scripts/: CMakeLists.txt  pwm.cpp  pwm_test.cpp  servotest.py
scripts/CLDL/include/cldl/: Layer.h  Net.h  Neuron.h
scripts/CLDL/lib/: Layer.cpp  Net.cpp  Neuron.cpp  cldl_kernels.cl
scripts/Tests/: TestBotAndCamera.cpp  TestBotMotion.cpp  TestCamera.cpp  TestLineFollowing.cpp  TestServoMotor.cpp  TestSpeedChange.cpp
scripts/include/: CameraFPSTracker.h  CaptureCameraFeed.h  DeltaBot.h  LineFollower.h  ServoMotorSetting.h
scripts/rplidar_rock/: CMakeLists.txt  a1lidarrpi.cpp  a1lidarrpi.h  mobilenetv2.py  printRPM.cpp  printdata.cpp  pwm_test
scripts/src/: CameraFPSTracker.cpp  CaptureCameraFeed.cpp  DeltaBot.cpp  LineFollower.cpp  Pwm.cpp  ServoMotorSetting.cpp
